@@ -52,13 +52,19 @@
        <echo message="Will not build GATE-based entity detector; GATE classes not found."/>
     </target>
 
-    <target depends="init, no-gate, no-owl" name="build-project">
+    <available classname="opennlp.tools.sentdetect.SentenceDetector" property="OpenNLP.present"/>
+    <target name="no-opennlp" unless="OpenNLP.present">
+       <echo message="Will not build OpenNLP-based sentence detector; OpenNLP classes not found."/>
+    </target>
+
+    <target depends="init, no-gate, no-owl, no-opennlp" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin"
             source="${source}" target="${target}">
             <src path="src/java"/>
             <exclude name="**/OWLView.java" unless="OWL.present" />
             <exclude name="**/GateEntityDetector.java" unless="GATE.present" />
+            <exclude name="**/DocSplitterOpenNLPImpl.java" unless="OpenNLP.present" />
             <classpath refid="relex.classpath"/>
         </javac>
     </target>
